# serverless-otlp-forwarder

./: Cargo.toml  README.md  template.yaml
.github/workflows/: pages.yml  pr-check-startled.yml  publish-node-lambda-otel-lite.yml  publish-python-lambda-otel-lite.yml  publish-rust-lambda-lw-http-router.yml  publish-rust-serverless-otlp-forwarder-core.yml  release-livetrace.yml  release-startled.yml  reusable-publish-rust-crate.yml
benchmark/: Cargo.toml
benchmark/functions/nodejs/auto/basic/: index.js
benchmark/functions/nodejs/manual/basic/: package.json
benchmark/src/: benchmark.rs  main.rs
cli/livetrace/: CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES.md
cli/livetrace/src/: aws_setup.rs  cli.rs  config.rs  console_display.rs  forwarder.rs  lib.rs  live_tail_adapter.rs  main.rs  poller.rs  processing.rs
cli/startled/: CHANGELOG.md  Cargo.toml  PUBLISHING.md  README.md  RELEASE_NOTES.md  pricing.py
cli/startled/proxy/: .gitignore  Cargo.toml  Makefile  README.md  samconfig.toml  template.yaml
cli/startled/proxy/src/: main.rs
cli/startled/src/: benchmark.rs  lambda.rs  main.rs  report.rs  screenshot.rs  stats.rs  telemetry.rs
cli/startled/src/templates/: _sidebar.html  chart.html  index.html
cli/startled/src/templates/css/: style.css
cli/startled/src/templates/js/: lib.js
cli/startled/testbed/: README.md  template.yaml  testbed.md
cli/startled/testbed/functions/rust/collector/src/: main.rs
demo/rust/: Cargo.toml
demos/old/node/: package.json
demos/old/rust/src/backend/: main.rs
demos/todos/: .gitignore  README.md  samconfig.toml  template.yaml
demos/todos/node/: index.ts  package-lock.json  package.json  spanEvent.ts  tsconfig.json
demos/todos/python/edge/: request.py  requirements.txt  response.py
demos/todos/python/processor/: main.py  requirements.txt  span_event.py  sqs_tracing.py
demos/todos/rust/: Cargo.toml
demos/todos/rust/src/: response.rs  spanevent.rs
demos/todos/rust/src/backend/: db.rs  main.rs
demos/todos/rust/src/frontend/: main.rs
demos/todos/rust/src/frontend/static/css/: style.css
demos/todos/rust/src/frontend/static/js/: app.js
demos/todos/rust/src/frontend/templates/: index.html
docs/: Gemfile  _config.yml  index.md
docs/_sass/color_schemes/: theme.scss
docs/advanced/: index.md
docs/concepts/: architecture.md  index.md  processors.md
docs/deployment/: index.md
docs/getting-started/: configuration.md  index.md  installation.md
docs/languages/: index.md  nodejs.md  python.md  rust.md
docs/troubleshooting/: index.md
experimental/aws-span-processor/processor/: Cargo.toml
experimental/aws-span-processor/processor/src/: main.rs
experimental/otlp-stdout-kinesis-processor/processor/: Cargo.toml
experimental/otlp-stdout-kinesis-processor/processor/src/: main.rs
forwarders/: .gitignore  README.md  deployment-report.md  pipeline.yaml
forwarders/collector/: README.md  samconfig.yaml  template.yaml
forwarders/collector/config/: Makefile  collector.yaml
forwarders/experimental/aws-span-processor/: samconfig.toml  samconfig.yaml  template.yaml
forwarders/experimental/aws-span-processor/processor/: Cargo.toml
forwarders/experimental/aws-span-processor/processor/src/: main.rs  otlp.rs  parser.rs
forwarders/experimental/otlp-stdout-kinesis-processor/: samconfig.toml  samconfig.yaml  template.yaml
forwarders/experimental/otlp-stdout-kinesis-processor/extension/: samconfig.yaml  template.yaml
forwarders/experimental/otlp-stdout-kinesis-processor/extension/layer/src/: aggregation.rs  config.rs  kinesis.rs  main.rs  otlp_parsing.rs
forwarders/experimental/otlp-stdout-kinesis-processor/processor/: Cargo.toml
forwarders/experimental/otlp-stdout-kinesis-processor/processor/src/: main.rs
forwarders/otlp-stdout-logs-processor/: samconfig.toml  samconfig.yaml  template.yaml
forwarders/otlp-stdout-logs-processor/processor/: Cargo.toml
forwarders/otlp-stdout-logs-processor/processor/src/: collectors.rs  headers.rs  main.rs  processing.rs
processors/: otlp-stdout.yaml
processors/forwarder/src/: lib.rs  log_processor.rs
