[package]
name = "otlp-stdout-logs-processor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serverless-otlp-forwarder-core = { workspace = true, features = ["instrumented-client"] }
tokio.workspace = true
serde_json.workspace = true
anyhow.workspace = true
opentelemetry.workspace = true
tracing.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-tracing.workspace = true
aws-config.workspace = true
serde.workspace = true
lambda_runtime.workspace = true
lambda-otel-lite.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
async-trait.workspace = true
bytes.workspace = true
url.workspace = true
otlp-stdout-span-exporter.workspace = true
aws_lambda_events = { workspace = true, features = ["cloudwatch_logs"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[[bin]]
name = "logs_processor"
path = "src/main.rs"

