[package]
name = "aws-span-processor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serverless-otlp-forwarder-core = { workspace = true, features = ["instrumented-client"] }
tokio.workspace = true
anyhow.workspace = true
lambda_runtime.workspace = true
reqwest.workspace = true
tracing.workspace = true
lambda-otel-lite.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
aws-config.workspace = true
serde_json.workspace = true
aws_lambda_events = { workspace = true, features = ["cloudwatch_logs"] }
opentelemetry.workspace = true
serde = { workspace = true, features = ["derive"] }
opentelemetry-proto.workspace = true
prost.workspace = true
reqwest-middleware.workspace = true
reqwest-tracing.workspace = true
async-trait.workspace = true
bytes.workspace = true
url.workspace = true

[[bin]]
name = "span_processor"
path = "src/main.rs"
